# guss-monitoring-bot

./: .gitignore  Dockerfile  README.md  nixpacks.toml  pyproject.toml  settings.json
gussbot/: apartments.py  main.py  storage.py  types.py
